# motadata_GranularLevel_sdk_Faas

./: .env.example  .gitignore  .pythonpath.txt  .sonarlintignore  AI_SDK_END_TO_END_FLOW.md  BUILDING_NEW_USECASE_GUIDE.md  CHANGELOG.md  COMPONENT_DEPENDENCIES.md  CONTRIBUTING.md  CORE_COMPONENTS_INTEGRATION_STORY.md  EXAMPLES_AND_TESTS_SUMMARY.md  EXCEPTION_ARCHITECTURE.md  FILES_ANALYSIS.md  FUNCTION_DRIVEN_API.md  GAP_ANALYSIS_REPORT.md  IDE_ERROR_TROUBLESHOOTING.md  Makefile  NATS.md  ONBOARDING_GUIDE.md  OPENTELEMETRY_LIST.txt  PROJECT_STRUCTURE.md  PYTHON_SDK_DEV_ENVIRONMENT_SETUP_GUIDE.md  PYTHON_SDK_QUALITY_GATE_RULES_AND_DEVELOPMENT_GUIDELINE_DOCUMENT.md  README.md  README_DEVELOPER.md  SDK_ARCHITECTURE.md  SDK_DEVELOPMENT_STORY.md  SDK_EXECUTIVE_SUMMARY.txt  TEST_CASES_AND_CI_CD_ALIGNMENT.md  Testing_guide.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.sh  sonar-project.properties
ARCHITECTURE/: AI_ARCHITECTURE_DESIGN.md  COMPONENT_CATEGORIZATION.md  COMPONENT_DEPENDENCIES.md  EXAMPLES_AND_TESTS_SUMMARY.md  PROJECT_STRUCTURE.md  SDK_ARCHITECTURE.md
component_explanation/: README.md  agno_agent_framework_explanation.md  api_backend_services_explanation.md  evaluation_observability_explanation.md  litellm_gateway_explanation.md  nats_integration_explanation.md  otel_integration_explanation.md  postgresql_database_explanation.md  prompt_context_management_explanation.md  rag_system_explanation.md
connectivity_clients/: README.md  __init__.py  client.py
docs/: MANAGEMENT_AND_TECHNICAL_QUESTIONS.md  ONBOARDING_GUIDE.md  PROFESSIONAL_SDK_EVALUATION.md  README.md  architecture_overview.md  libraries.md
docs/architecture/: AI_ARCHITECTURE_DESIGN.md  CLEANUP_SUMMARY.md  (+13 more)
examples/: README.md  USE_CASES_STRUCTURE.md  hello_world.py
governance_framework/: README.md  __init__.py  security.py
pool_implementation/: README.md  __init__.py  pool.py
src/: __init__.py  libraries.md  workflows.md
tests/: __init__.py
working_progress/: AI_IMPROVEMENTS_IMPLEMENTATION.md  ALL_FIXES_SUMMARY.md  AZURE_DEVOPS_REPO_WORKFLOW.md  AZURE_DEVOPS_USER_STORIES.md  CRITICAL_FIXES_COMPLETE.md  CRITICAL_FIXES_IMPLEMENTATION.md  Important_REVIEW_ASSESSMENT.md  MEMORY_MANAGEMENT_IMPROVEMENTS.md  NATS_OTEL_CODEC_QUICK_REFERENCE.md  NATS_OTEL_CODEC_REQUIREMENTS.md  OTEL_IMPLEMENTATION_GUIDE.md  PRODUCTION_READINESS_ASSESSMENT.md  Primarily component gap.md  README.md  SDK_COMPLETE_BUILD_TIMELINE.md  SDK_COMPREHENSIVE_EVALUATION.md  SDK_EXECUTIVE_SUMMARY.txt  SDK_GAPS_ANALYSIS.md  TENANT_CONTEXT_IMPLEMENTATION.md
(+433 files in other folders)
